--- a/modules/example/package.json
+++ b/modules/example/package.json
@@ -12,9 +12,13 @@
   "author": "Anthony Cleaver",
   "license": "ISC",
   "devDependencies": {
+    "@angular/core": "^7.0.1",
     "@types/node": "^10.12.0",
     "alsatian": "^2.3.0",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
+  },
+  "dependencies": {
+    "@yppa/parser": "file:yppa-parser-1.0.0.tgz"
   }
 }
