--- a/modules/generator/package.json
+++ b/modules/generator/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@yppa/example",
+  "name": "@yppa/generator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "alsatian ./src/**/*.spec.ts",
@@ -12,14 +12,12 @@
   "author": "Anthony Cleaver",
   "license": "ISC",
   "devDependencies": {
-    "@angular/core": "^7.0.1",
     "@types/node": "^10.12.0",
     "alsatian": "^2.3.0",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
   },
   "dependencies": {
-    "@yppa/generator": "file:yppa-generator-1.0.0.tgz",
     "@yppa/parser": "file:yppa-parser-1.0.0.tgz"
   }
 }
