--- a/modules/cli/package.json
+++ b/modules/cli/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "@yppa/example",
+  "name": "@yppa/cli",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "bin": {
+    "yppa": "./dist/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "test": "alsatian ./src/**/*.spec.ts",
     "lint": "tslint --project ./tsconfig.json",
-    "prepublish": "npm run lint && npm run build",
-    "run": "yppa --src=\"./src/**/*.component.ts\" --out=\"./dist\""
+    "prepublish": "npm run lint && npm run build"
   },
   "author": "Anthony Cleaver",
   "license": "ISC",
   "devDependencies": {
-    "@angular/core": "^7.0.1",
-    "@types/node": "^10.12.0",
+    "@types/node": "^10.12.2",
     "alsatian": "^2.3.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.6"
   },
   "dependencies": {
-    "@yppa/cli": "file:yppa-cli-1.0.0.tgz",
     "@yppa/generator": "file:yppa-generator-1.0.0.tgz",
-    "@yppa/parser": "file:yppa-parser-1.0.0.tgz"
+    "@yppa/parser": "file:yppa-parser-1.0.0.tgz",
+    "yargs": "^12.0.2"
   }
 }
