--- a/modules/generator/package.json
+++ b/modules/generator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yppa/generator",
-  "version": "1.0.0",
+  "version": "0.2.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -18,6 +18,6 @@
     "typescript": "^3.1.3"
   },
   "dependencies": {
-    "@yppa/parser": "file:yppa-parser-1.0.0.tgz"
+    "@yppa/parser": "^0.1.0"
   }
 }
