--- a/modules/generator/package.json
+++ b/modules/generator/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@yppa/generator",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "alsatian ./src/**/*.spec.ts",
     "lint": "tslint --project ./tsconfig.json",
-    "prepublish": "npm run lint && npm run build"
+    "prepack": "npm run lint && npm run build"
   },
   "author": "Anthony Cleaver",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "typescript": "^3.1.3"
   },
   "dependencies": {
-    "@yppa/parser": "^0.1.0"
+    "@cleavera/utils": "^1.1.0",
+    "@yppa/parser": "^0.2.0"
   }
 }
