--- a/modules/example/package.json
+++ b/modules/example/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "test": "alsatian ./src/**/*.spec.ts",
     "lint": "tslint --project ./tsconfig.json",
-    "prepublish": "npm run lint && npm run build",
+    "prepack": "npm run lint && npm run build",
     "run": "yppa --src=\"./src/**/*.component.ts\" --out=\"./dist\""
   },
   "author": "Anthony Cleaver",
@@ -21,8 +21,8 @@
     "typescript": "^3.1.3"
   },
   "dependencies": {
-    "@yppa/cli": "file:yppa-cli-0.2.0.tgz",
-    "@yppa/generator": "file:yppa-generator-0.2.0.tgz",
-    "@yppa/parser": "file:yppa-parser-0.2.0.tgz"
+    "@yppa/cli": "^0.3.0",
+    "@yppa/generator": "^0.3.0",
+    "@yppa/parser": "^0.2.0"
   }
 }
