--- a/modules/example/package.json
+++ b/modules/example/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "test": "alsatian ./src/**/*.spec.ts",
     "lint": "tslint --project ./tsconfig.json",
-    "prepack": "npm run lint && npm run build",
+    "prepack": "exit 1",
     "run": "yppa --src=\"./src/**/*.component.ts\" --out=\"./dist\""
   },
   "author": "Anthony Cleaver",
@@ -21,8 +21,8 @@
     "typescript": "^3.1.3"
   },
   "dependencies": {
-    "@yppa/cli": "^0.4.0",
-    "@yppa/generator": "^0.4.0",
+    "@yppa/cli": "^0.5.0",
+    "@yppa/generator": "^0.5.0",
     "@yppa/parser": "^0.3.0"
   }
 }
